add complete header

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,6 @@
 	);
 }
 
-.App-header {
-	background-color: #f0f0f0;
-	box-shadow: 1px 1px 50px 1px #c2c2c2;
-	display: flex;
-	justify-content: center;
+li {
+	list-style: none;
 }
